--- a/style.css
+++ b/style.css
@@ -13,5 +13,24 @@ nav
 }
 div
 {
-    
+    list-style-type: square;
+    border: 4px solid black;
+    background-color: rgb(204, 255, 0);
+    width: 850px;
+    padding: 7px;
+}
+
+.paragraph
+{
+    margin: auto;
+    border-radius: 5px;
+    background-color: rgb(119, 214, 23);
+    width: 400px;
+    border: 1px solid black;
+    padding: 20px;
+    float: center;
+}
+.header3
+{
+
 }
