CSS coding editing. And some more HTML editing

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ nav
 }
 div
 {
+    margin: auto;
     list-style-type: square;
     border: 4px solid black;
     background-color: rgb(204, 255, 0);
@@ -25,7 +26,7 @@ div
     margin: auto;
     border-radius: 5px;
     background-color: rgb(119, 214, 23);
-    width: 400px;
+    width: 700px;
     border: 1px solid black;
     padding: 20px;
     float: center;
@@ -33,4 +34,13 @@ div
 .header3
 {
 
+}
+
+.bibleVerse
+{
+    font-family: bold;
+    color: rgb(35, 29, 29);
+    font-size: 20px;
+    font-weight: 100;
+    text-align: left;
 }
