--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ nav
 div
 {
     margin: auto;
-    list-style-type: square;
+    /*list-style-type: square;*/
     border: 4px solid black;
     background-color: rgb(204, 255, 0);
-    width: 850px;
+   /* width: 850px;*/
     padding: 7px;
 }
 
@@ -31,7 +31,7 @@ div
     margin: auto;
     border-radius: 5px;
     background-color: rgb(119, 214, 23);
-    width: 700px;
+    width: 1400px;
     border: 1px solid black;
     padding: 20px;
     float: center;
