Added some phots, along with CSS correcting.

--- a/style.css
+++ b/style.css
@@ -6,11 +6,17 @@ img
 {
     width: 200px;
     height: 200px;
+    border: 5px solid #170202;
 }
 .imageRight
 {
-    
-    
+    float: right;
+    margin-left: 10px;
+}
+.imageLeft
+{
+    float: left;
+    margin-right: 10px;
 }
 nav
 {
@@ -19,10 +25,8 @@ nav
 div
 {
     margin: auto;
-    /*list-style-type: square;*/
     border: 4px solid black;
     background-color: rgb(204, 255, 0);
-   /* width: 850px;*/
     padding: 7px;
 }
 
