--- a/style.css
+++ b/style.css
@@ -50,8 +50,14 @@ nav
     padding: 20px;
     float: center;
 }
-.header3
+.header2
 {
+    border-bottom: 1px solid #191616;
+}
+.header1
+{
+    border-bottom: 1px solid #191616;
+    font-size: 30px;
 
 }
 .bibleVerse
