--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ nav
     margin: auto;
     border-radius: 5px;
     background-color: rgb(119, 214, 23);
-    width: 1400px;
+    width: 1100px;
     border: 1px solid black;
     padding: 20px;
     float: center;
@@ -67,4 +67,10 @@ nav
     font-size: 20px;
     font-weight: 100;
     text-align: left;
+}
+footer
+{
+    text-align: center;
+    padding: 10px;
+    background-color: rgb(204, 255, 0);
 }
