--- a/style.css
+++ b/style.css
@@ -67,3 +67,11 @@ nav
     color: rgb(35, 29, 29);
     font-size: 20px;
     font-weight: 100;
+    text-align: left;
+}
+footer
+{
+    text-align: center;
+    padding: 10px;
+    background-color: rgb(204, 255, 0);
+}
