--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body 
 {
     background-color: silver !important; 
+    z-index: 1;
 }
 ul li 
 {
@@ -35,6 +36,13 @@ img
     height: 200px;
     border: 5px solid #170202 !important;
 }
+.sjsuImage
+{
+    width: 200px;
+    height: 200px;
+    float: right;
+    margin-left: 10px;
+}
 .imageSize
 {
     width: 160px;
@@ -58,14 +66,18 @@ nav
     margin-right: 50px;
 
 }
+.pSizing
+{
+    font-size: 22px;
+}
 .divideBox
 {
     margin: auto;
-    border: 4px solid black !important;
-    background-color: rgb(204, 255, 0) !important;
+    border: 4px solid black;
+    background-color: rgb(204, 255, 0);
     padding: 7px;
+    z-index: 2;
 }
-
 .divideSquare
 {
     margin: auto;
@@ -74,16 +86,18 @@ nav
     padding: 10px;
     margin-bottom: 10px;
     width: 1000px;
+    z-index: 4;
 }
 .paragraph
 {
     margin: auto;
     border-radius: 5px;
-    background-color: rgb(119, 214, 23) !important;
+    background-color: rgb(119, 214, 23);
     width: 1100px;
     border: 4px solid black;
     padding: 20px;
     float: center;
+    z-index: 3;
 }
 .header2
 {
@@ -98,7 +112,7 @@ nav
 .bibleVerse
 {
     font-family: bold;
-    color: rgb(35, 29, 29);
+    color: rgb(35, 29, 29) !important;
     font-size: 20px;
     font-weight: 100;
     text-align: left;
@@ -109,6 +123,7 @@ footer
     padding: 10px;
     background-color: rgb(204, 255, 0) !important;;
     border: 4px solid black !important;
+    z-index: 5;
 }
 .textSize
 {
@@ -133,8 +148,12 @@ input[type=submit]
     padding: 16px 32px;
     cursor: pointer;
 }
-
-
+.icon
+{
+    width: calc(3% - 12px);
+    height: calc(3% - 12px);
+    border: 1px solid rgb(242, 244, 238)!important;
+}
 /* For a screen the size of an iPhone or an Android phone.*/
 @media (max-width: 767px)
 {
@@ -142,7 +161,6 @@ input[type=submit]
     {
         width: 340px;
     }
-
     .divideSquare
     {
         width: 320px;
@@ -162,5 +180,18 @@ input[type=submit]
     #emailMessage
     {
         width: 100%; 
+    }
+    .sjsuImage
+    {
+        width: 100px;
+        height: 100px;
+    }
+    .icon
+    {
+        width: 12px;
+    }
+    .pSizing
+    {
+        font-size: 16px;
     }
 }
