--- a/style.css
+++ b/style.css
@@ -70,185 +70,4 @@ img
 {
     width: 200px;
     height: 200px;
-    float: right;
-    margin-left: 10px;
-}
-.imageSize
-{
-    width: 160px;
-    height: 160px;
-}
-.imageRight
-{
-    float: right;
-    margin-left: 10px;
-}
-.imageLeft
-{
-    float: left;
-    margin-right: 10px;
-}
-nav
-{
-    float: right;
-    font-size: 20px;
-    text-align: center;
-    margin-right: 50px;
-
-}
-.navigationGrid
-{
-    
-}
-.pSizing
-{
-    font-size: 20px;
-}
-.divideBox
-{
-    margin: auto;
-    border: 4px solid black;
-    background-color: rgb(204, 255, 0);
-    padding: 7px;
-    z-index: 2;
-}
-.divideSquare
-{
-    margin: auto;
-    border: 1px solid black;
-    background-color: rgb(242, 244, 238);
-    padding: 10px;
-    margin-bottom: 10px;
-    width: 1000px;
-    z-index: 4;
-}
-.paragraph
-{
-    margin: auto;
-    border-radius: 5px;
-    background-color: rgb(119, 214, 23);
-    width: 1100px;
-    border: 4px solid black;
-    padding: 20px;
-    float: center;
-    z-index: 3;
-}
-.header2
-{
-    border-bottom: 1px solid #191616;
-}
-.header1
-{
-    border-bottom: 1px solid #191616;
-   font-size: 30px;
-
-}
-.partOfTheHeader
-{
-    font-size: 30px;
-}
-.bibleVerse
-{
-    font-family: bold;
-    color: rgb(35, 29, 29) !important;
-    font-size: 20px;
-    font-weight: 100;
-    text-align: left;
-}
-footer
-{
-    text-align: center;
-    padding: 10px;
-    background-color: rgb(204, 255, 0) !important;;
-    border: 4px solid black !important;
-    z-index: 5;
-}
-.textSize
-{
-    font-size: 24px;
-}
-.formBox
-{
-    position: relative;
-    background-color: rgb(231, 226, 226);
-    border: solid black 5px;
-    border-radius: 9%;
-    margin: 2rem;
-    padding: 1rem;
-    width: 400px;
-    margin-left: auto;
-    margin-right: auto
-}
-input[type=submit]
-{
-    background-color: rgb(142, 158, 175) !important;
-    border: 9;
-    padding: 16px 32px;
-    cursor: pointer;
-}
-.icon
-{
-    width: 12px;
-    height: 12px;
-    border: 1px solid rgb(242, 244, 238)!important;
-}
-/* For a screen the size of an iPhone or an Android phone.*/
-@media (max-width: 767px)
-{
-    .paragraph
-    {
-        width: 340px;
-    }
-    .divideSquare
-    {
-        width: 320px;
-    }
-    .gridContainer
-    {
-        grid-template-columns: 230px;
-    }
-    .formBox
-    {
-        width: 200px;
-    }
-    ul li 
-    {
-        font-size: 15px;
-    }
-    #emailMessage
-    {
-        width: 100%; 
-    }
-    .sjsuImage
-    {
-        width: 100px;
-        height: 100px;
-    }
-    .icon
-    {
-        width: 12px;
-    }
-    .pSizing
-    {
-        font-size: 16px;
-    }
-    .gridEducation
-    {
-        grid-template-columns: 230px 90px;
-        gap: 1.05px;
-    }
-    .partOfTheHeader
-    {
-        font-size: 15px;
-    }
-    .gridSkills
-    {
-        grid-template-columns: 230px 90px;
-        gap: 1.05px;
-    }
-    .codingImage
-    {
-        width: 100px;
-        height: 100px;
-    }
-}
+    fl
